--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="css/style.min.css?-_v=20220720153351" />
+<link rel="stylesheet" href="css/style.min.css" />
 <link rel="shortcut icon" href="img/logo.svg" type="image/png" />
 <link
   rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css?-_v=20220720153351"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <title>Tokners</title>
 
@@ -75,34 +75,39 @@
   <div class="container">
     <div class="items">
       <div class="item">
-        <div class="number">01</div>
-        <div class="subTitle">
-          For &nbsp;
-          <div class="green">Creators</div>
+        <div>
+          <div class="number">01</div>
+          <div class="subTitle">
+            For &nbsp;
+            <div class="green">Creators</div>
+          </div>
+          <div class="subText">
+            Creators can gain independence through a decentralised digital
+            currency system that is dependent on growing and engaging with the
+            community and also their star power. They own 10-15% of the total
+            value of the tokens minted.
+          </div>
         </div>
-        <div class="subText">
-          Creators can gain independence through a decentralised digital
-          currency system that is dependent on growing and engaging with the
-          community and also their star power. They own 10-15% of the total
-          value of the tokens minted.
-        </div>
+
         <div class="img">
-          <img src="img/creators.svg" alt="creatorIcon" class="creators" />
+          <img src="img/creators.png" alt="creatorIcon" class="creators" />
         </div>
       </div>
       <div class="item">
-        <div class="number">02</div>
-        <div class="subTitle">
-          For &nbsp;
-          <div class="blue">Hodlers</div>
-        </div>
-        <div class="subText">
-          Holding social tokens allows the individual to gain access to benefits
-          including unreleased content, private communities, direct access to
-          celebrity, early-access to tickets and more as well as the ability to
-          trade with other communities in order to gain access to more creator
-          content with early token buyers being the biggest winners as the value
-          of the token increases with more buyers.
+        <div>
+          <div class="number">02</div>
+          <div class="subTitle">
+            For &nbsp;
+            <div class="blue">Hodlers</div>
+          </div>
+          <div class="subText">
+            Holding social tokens allows the individual to gain access to
+            benefits including unreleased content, private communities, direct
+            access to celebrity, early-access to tickets and more as well as the
+            ability to trade with other communities in order to gain access to
+            more creator content with early token buyers being the biggest
+            winners as the value of the token increases with more buyers.
+          </div>
         </div>
         <div class="img">
           <img src="img/hodlers.svg" alt="creatorIcon" class="hodlers" />
@@ -397,6 +402,6 @@
   </div>
 </footer>
 
-    <script src="./js/app.min.js?-_v=20220720153351"></script>
+    <script src="./js/app.min.js"></script>
   </body>
 </html>
